--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Crotchet1.net
+title: Crotchet.net
 email: crotchet@crotchet.net
 description: > # this means to ignore newlines until "baseurl:"
   A Crotchey Blog.
