--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Crotchet.net
 email: crotchet@crotchet.net
 description: > # this means to ignore newlines until "baseurl:"
   A Crotchey Blog.
-baseurl: "/" # the subpath of your site, e.g. /blog/
+baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://www.crotchet.net" # the base hostname & protocol for your site
 twitter_username: crotchetnet
 github_username:  jekyll
