--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: getwellmessages.net
+title: Get Well Messages
 email: hello@getwellmessages.net
 description: > # this means to ignore newlines until "baseurl:"
   A Crotchey Blog.
