--- a/_config.yml
+++ b/_config.yml
@@ -19,3 +19,6 @@ author:
   name:         'Admin'
   url:          https://www.getwellmessages.net
   email:        hello@getwellmessages.net
+
+plugins:
+  - jekyll-sitemap
