--- a/_config.yml
+++ b/_config.yml
@@ -19,3 +19,5 @@ author:
   name:         'Admin'
   url:          https://www.getwellmessages.net
   email:        hello@getwellmessages.net
+
+categories: [messages, quotes, poems, prayers, funny, faq]
