--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Get Well Messages: What to Write in a Get Well Card
+title: Get Well Messages
 email: hello@getwellmessages.net
 description: > # this means to ignore newlines until "baseurl:"
   If you're struggling with what to say in a get well card our range of messages, quotes, poems and more will help you write the best get well message.
