--- a/_config.yml
+++ b/_config.yml
@@ -21,3 +21,5 @@ author:
   email:        hello@getwellmessages.net
 
 categories: [messages, quotes, poems, prayers, funny, faq]
+
+google_adsense: ca-pub-2642906032724935
